--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "paths": {
+      "@blog/*": ["./src/*"]
+    },
     "lib": [
       "es2018",
       "dom"
