(fix): Code formated && added path for relative

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
       "node_modules/@types"
     ],
     "paths": {
-      "@blog/*": ["./src/*"]
+      "@blog/*": ["./src/app/*"],
+      "@environments/*": ["./src/environments/*"],
+      "@assets/*": ["./src/assets/*"]
     },
     "lib": [
       "es2018",
